# nupatch

./: Cargo.toml  LICENSE  README.md  nushell-patch-guide.md
src/: cli.rs  core.rs  integrity.rs  main.rs  paths.rs  util.rs
